--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,46 @@
-.App {
-  /* text-align: center; */
+/* .App {
+  text-align: center;
+} */
+
+.row-header{
+  margin:0px auto;
+  padding:0px auto;
 }
 
-.App-logo {
+.row-content {
+  margin:0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height:400px;
+}
+
+.footer{
+  background-color: #D1C4E9;
+  margin:0px auto;
+  padding: 20px 0px 20px 0px;
+}
+.jumbotron {
+  padding:70px 30px 70px 30px;
+  margin:0px auto;
+  background: #9575CD ;
+  color:floralwhite;
+}
+
+address{
+  font-size:80%;
+  margin:0px;
+  color:#0f0f0f;
+}
+
+.navbar-dark {
+  background-color: #512DA8;
+}
+
+.btn-space {
+  margin-right: 10px;
+}
+
+/* .App-logo {
   height: 5vmin;
   pointer-events: none;
 }
@@ -35,4 +73,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
